# audible-rs

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  install.ps1  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/homebrew/: audible-rs.rb.tmpl
.github/workflows/: build-binary.yml  ci.yml  release.yml  tap-token.yml  update-changelog.yml
examples/plugins/: cmd_gui.py  cmd_library-gui.py  cmd_listening-stats.py
proto/: license_protocol.proto
scripts/: gen_fixtures.py
sdk/python/: README.md  pyproject.toml
sdk/python/audible_plugin_sdk/: __init__.py
src/: activation.rs  catalog.rs  collections.rs  downloader.rs  fsutil.rs  lib.rs  library_sync.rs  main.rs  naming.rs  timefmt.rs
src/api/: client.rs  locale.rs  mod.rs  paginator.rs
src/auth/: authfile.rs  cookies.rs  device.rs  legacy.rs  mod.rs  signing.rs
src/auth/login/: challenge.rs  internal.rs  metadata1.rs  mod.rs  page.rs  server.rs
src/commands/: agent.rs  annotations.rs  catalog.rs  collections.rs  completions.rs  config.rs  db.rs  hosts.rs  items.rs  mod.rs  plugin.rs  podcasts.rs  prompt.rs  selfcmd.rs  series.rs  settings.rs  setup.rs  stats.rs
src/commands/account/: login.rs  manage.rs  material.rs  mod.rs  password.rs  status.rs
src/commands/api/: mod.rs  request_file.rs
src/commands/download/: artifacts.rs  decrypt.rs  info.rs  item.rs  license.rs  mod.rs  orphans.rs  reorganize.rs  request_kind.rs  widevine.rs
src/config/: ctx.rs  filename_template.rs  mod.rs  passwords.rs  paths.rs  resolve.rs  schema.rs  write.rs
src/crypto/: mod.rs
src/db/: annotations.rs  changes.rs  downloads.rs  episodes.rs  items.rs  mod.rs  schema.rs  series.rs  stats.rs  test_util.rs
src/models/: content.rs  library.rs  mod.rs
src/output/: mod.rs
src/plugins/: broker.rs  mod.rs
src/session/: agent.rs  audit.rs  client.rs  mod.rs  rpc.rs  tokens.rs  winpipe.rs
src/widevine/: client.rs  device.rs  mod.rs  mpd.rs  proto.rs  provider.rs  pssh.rs
tests/: account_command.rs  account_password.rs  account_password_source.rs  api_client.rs  authenticator.rs  chapter_metadata.rs  config_command.rs  download_resume.rs  import_onboarding.rs  legacy_import.rs  library_sync.rs  license_request.rs  paginator.rs  series_missing.rs  signing_golden.rs  voucher.rs
tests/fixtures/: legacy_encrypted_json.json  legacy_meta.json  legacy_plain.json  signing.json  voucher.json
