# audible-plugin-sdk — stdlib-only client for the audible-rs plugin
# broker (AUD-69/70). PyPI publishing is a release-time concern (M8);
# until then: `pip install <repo>/sdk/python` or PYTHONPATH.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audible-plugin-sdk"
version = "0.1.0"
description = "SDK for audible-rs plugins: describe protocol + broker client (HTTP over unix socket)"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }

[tool.setuptools.packages.find]
include = ["audible_plugin_sdk*"]
